end of section 11

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDN2Pr0dOKoJq70Y5Zs0qbh-0ZkL5M7iqc&libraries=places"></script>
     <title>Re-vents</title>
 
   </head>
